# fat_test

./: .gitignore  CMakeLists.txt  CMakeSettings.json  buffer.c  buffer.h  game.c  game.h  launch.vs.json  main.c  makefile  nyudisk.c  nyudisk.h  nyufat32.h  nyufile  nyufile.c  nyuinput.c  nyuinput.h  nyurecover.c  nyurecover.h  nyuutils.c  nyuutils.h  utils.c  utils.h
Assignment 1（C编程）/补充/: ADVICE.txt
myoutputs/: 3.1  3.4
nyu/: Makefile  nyudisk.c  nyudisk.h  nyufile  nyufile.c  nyurecover.c
nyu/nyufile-autograder/: gradeit.sh
nyu/nyufile-autograder/myoutputs/: 8.2
nyufile-autograder/: checksum.txt  gradeit.sh
nyufile-autograder/myoutputs/: 3.1
